--- a/views/profil.html
+++ b/views/profil.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="profil.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link rel="stylesheet" href="../profil.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   
@@ -30,7 +30,9 @@
 			<div class="col-md-2 img-all" id="two"></div>
 			<div class="col-md-2 img-all" id="three"></div>
 			<div class="col-md-2 img-all" id="four"></div>	
-		</div>
+		</div><div class="col-md-2 img-all" id="six"></div>
+			<div class="col-md-2 img-all" id="seven"></div>
+			<div class="col-md-2 img-all" id="eight"></div>
 		
 		<div class="row">
 			<div class="col-md-2 col-md-offset-1 img-all" id="five"></div>
