--- a/views/contest.html
+++ b/views/contest.html
@@ -5,8 +5,11 @@
 	<title>Concours</title>
 	<link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="../css/contest.css">
+	<script src="../bower_components/angular/angular.js"></script>
+	<script src="../bower_components/angular-route/angular-route.js"></script>
 </head>
-<body>
+<body ng-app="ArtLike">
+	<div ng-view></div>
 	<div class="container-fluid">
 		<div class="row contest-head">
 			<h1 class="contest-name text-center">Concours Photo #1</h1>
