--- a/css/profil.css
+++ b/css/profil.css
@@ -14,7 +14,7 @@
 	height: 200px;
 	width: 100px;
 	border: 2px solid black;
-	background: url(images/cold-1209216_960_720.jpg);
+	background: url(../img/cold-1209216_960_720.jpg);
 	background-size: cover;
 	margin-left: auto;
 	margin-right: auto;
