--- a/views/profil.html
+++ b/views/profil.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="ArtLike">
   <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <link rel="stylesheet" href="../profil.css" />
+  <link rel="stylesheet" href="../css/profil.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script> -->
+	<script src="../bower_components/angular/angular.js"></script>
+	<script src="../bower_components/angular-route/angular-route.js"></script>
+   <script type="text/javascript" src="../js/app.js"></script>
+
 
   
 </head>
 
   <body>
 
-  <div class="container">
+  <div class="container" ng-controller="ProfilController as profil">
 	
 	<div>
-	<div class="pseudo"><strong>Drake Ramoray</strong></div>
+	<div class="pseudo"><strong>{{profil.user.name}}</strong></div>
 		<div class="image"></div>
 		
-		<div>Photographe amateur</div>
-		<div><strong>Hobbies:</strong> Photographie, Sport, Lecture</div>
-		<div>Nombre d'oeuvres publiées: 8</div>
+		<div>{{profil.user.description}}</div>
+		<div><strong>Hobbies:</strong>{{profil.user.hobbie}}</div> <==ng repeat
+		<div>Nombre d'oeuvres publiées: {{profil.user.gallery.length}}</div>
 	</div>
 	
 	<div class="gallerie">
 		<h3><strong>Sa gallerie:</strong></h3>
 		<div class="row">
-			<div class="col-md-2 col-md-offset-1 img-all" id="one"></div>
+			<div class="col-md-2 col-md-offset-1 img-all" id="one" ><img ng-src="{{profil.user.gallery[0]}}"></div>
 			<div class="col-md-2 img-all" id="two"></div>
 			<div class="col-md-2 img-all" id="three"></div>
 			<div class="col-md-2 img-all" id="four"></div>	
-		</div><div class="col-md-2 img-all" id="six"></div>
-			<div class="col-md-2 img-all" id="seven"></div>
-			<div class="col-md-2 img-all" id="eight"></div>
+		</div>
 		
 		<div class="row">
 			<div class="col-md-2 col-md-offset-1 img-all" id="five"></div>
