--- a/views/contest.html
+++ b/views/contest.html
@@ -7,10 +7,12 @@
 	<link rel="stylesheet" type="text/css" href="../css/contest.css">
 	<script src="../bower_components/angular/angular.js"></script>
 	<script src="../bower_components/angular-route/angular-route.js"></script>
+	<script src="../js/app.js"></script>
+	<script src="../js/controller/contestController.js"></script>
 </head>
 <body ng-app="ArtLike">
 	<div ng-view></div>
-	<div class="container-fluid">
+	<div ng-controller="contestController as contestCtrl" class="container-fluid">
 		<div class="row contest-head">
 			<h1 class="contest-name text-center">Concours Photo #1</h1>
 			<div class="contest-infos col-xs-12 col-md-6 text-center">
@@ -22,7 +24,17 @@
 				</h2>
 			</div>
 			<div class="contest-subscribe col-xs-12 col-md-6 text-center">
-				<button type="button" class="btn btn-default btn-blue btn-large"> Je Participe </button>
+				<form>
+					<div class="form-group">
+						<label> Nom: </label>
+						<input ng-model="contestCtrl.name"></input>
+					</div>
+					<div class="form-group">
+						<label>Oeuvre:</label>
+						<input></input>
+					</div>
+					<button type="button" class="btn btn-default btn-blue btn-large"> Je Participe </button>
+				</form>
 			</div>
 		</div>
 		<div class="contest-pics">
