--- a/views/contest.html
+++ b/views/contest.html
@@ -8,7 +8,7 @@
 	<script src="../bower_components/angular/angular.js"></script>
 	<script src="../bower_components/angular-route/angular-route.js"></script>
 	<script src="../js/app.js"></script>
-	<script src="../js/controller/contestController.js"></script>
+	<script src="../js/controllers/contestController.js"></script>
 </head>
 <body ng-app="ArtLike">
 	<div ng-view></div>
@@ -27,7 +27,7 @@
 				<form>
 					<div class="form-group">
 						<label> Nom: </label>
-						<input ng-model="contestCtrl.name"></input>
+						<input ng-model="name"></input>
 					</div>
 					<div class="form-group">
 						<label>Oeuvre:</label>
