--- a/views/profil.html
+++ b/views/profil.html
@@ -9,6 +9,7 @@
 	<script src="../bower_components/angular/angular.js"></script>
 	<script src="../bower_components/angular-route/angular-route.js"></script>
    <script type="text/javascript" src="../js/app.js"></script>
+   <script type="text/javascript" src="../js/controllers/profilController.js"></script>
 
 
   
