--- a/views/contest.html
+++ b/views/contest.html
@@ -45,7 +45,7 @@
 					</div>
 					<div class="card-text">
 						<p class="text-center">
-							<a href="#">{{player.name}}</a> a 76% des votes !
+							<a href="profil.html">{{player.name}}</a> a 76% des votes !
 						</p>
 						<p class="text-center">
 							<button type="button" class="btn btn-default btn-blue">Voter</button>
