--- a/views/profil.html
+++ b/views/profil.html
@@ -32,7 +32,7 @@
 	<div class="gallerie">
 		<h3><strong>Sa gallerie:</strong></h3>
 		<div class="row">
-			<div class="col-md-2 col-md-offset-1 img-all" ><img ng-src="{{profil.users[1].gallery[1]}}"></div>
+			<div  id="one" class="col-md-2 col-md-offset-1 img-all" ><img></div>
 			<div class="col-md-2 img-all" id="two"></div>
 			<div class="col-md-2 img-all" id="three"></div>
 			<div class="col-md-2 img-all" id="four"></div>	
